@@ -1,3 +1,9 @@
+[B]1.4.5[/B]
+- Cleanup of a number of skin texture files.
+- Changes to make skin Gotham compliant.
+- further changes to skin navigation to improve consistency of navigation in settings screens.
+- A number of minor bug fixes and performance tweaks.
+
 [B]1.3.5[/B]
 - Reenabled tilting icons in List and Wall views, setting now accessable from "View-as" menu.
 - New home menu type "Icon".  User can now select from three home menu types
